<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/c14"
    android:keepScreenOn="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/line_title"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:id="@+id/tv_linkstate"
            android:textSize="15sp"
            android:textColor="@color/c25"
            android:text="@string/activity_receive_state"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@color/c20"
            android:layout_weight="1.5"
            android:id="@+id/tv_tx"
            android:textSize="15sp"
            android:textColor="@color/c14"
            android:text="@string/activity_receive_tx"
            />
        <View style="@style/GrayLineStyle_Ver"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@color/c2"
            android:layout_weight="1.5"
            android:id="@+id/tv_rx"
            android:textSize="15sp"
            android:textColor="@color/c14"
            android:text="@string/activity_receive_rx"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line_title"
        android:layout_above="@+id/line_et_send"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="2dp"
            android:background="@drawable/activity_receive_et_shape"
            android:id="@+id/tv_receive"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textColor="@color/c12"
            android:textSize="18sp"
            android:text="状态显示：\n"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/line_btn"
        android:id="@+id/line_et_send"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/activity_send_et_shape"
            android:id="@+id/et_send"
            android:hint="发送区"
            android:textSize="18sp"
            android:textColor="@color/c15"
            android:gravity="top"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/line_btn"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/cek_hex"
            android:text="HEX"
            android:checked="false"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_clear"
            android:layout_weight="1"
            android:text="Clear"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_send"
            android:layout_weight="1"
            android:text="Send"/>
    </LinearLayout>


</RelativeLayout>